Tweaks to formatting

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -8,11 +8,11 @@
   
   
   properties: {
-
+    #-------EQUIPPED MOVES-------#
     equipped_ability_slots: {
       type: "{ AbilityType -> {int -> class ability} }",
 
-      //abilites the player starts equipped with
+      // Initialize with the abilities the player starts with.
       init: "
       {
         (enum ability_basic): { (0): lib.game.get_ability('Punch') },
@@ -23,32 +23,38 @@
       }",
     },
 
+    // TODO Describe what this function does.
     get_slot_equipped: "def(AbilityType slot, int ncol) ->null|class ability
     if(abilities != null, abilities[ncol])
     where abilities = equipped_ability_slots[slot]
     ",
     
-    //TODO: make the player learn abilities rather than them having
-    //everything from the start.
+    // TODO: make the player learn abilities rather than them having
+    // everything from the start.
     learned_abilities: "[class ability] :: lib.game.player_abilities",
     equipped_abilities: "[class ability] :: fold(map(equipped_ability_slots, map(value, value)), a+b, [])",
 	
     // Indicates whether or not the player is in the middle of an attack that cannot be interrupted by walking.
     is_attacking: {type: "bool"},
 	
-  crouch_jump: {type: "int", default: -600},
-  standing_jump: -1000,
-  punch_count: {
-    type:"int",
-    default: 1,
-  },
-  stompCount: {
-    type:"int",
-    default: 0,
-  },
+  #-------Attack Counters and Timers-------#
+    crouch_jump: {
+      type: "int", 
+      default: -600
+    },
 
-  
-  #-------Attack Timers-------#
+    standing_jump: -1000,
+
+    punch_count: {
+      type:"int",
+      default: 1,
+    },
+
+    stompCount: {
+      type:"int",
+      default: 0,
+    },
+
    last_attacked: {
       type:"int",
       default: 0,
@@ -62,8 +68,7 @@
     ]",
   
   #-------Damage Based Functions-------#
-    //Function that initiates an invincibility check, damage calculation, and hurt animations.
-  
+    // Function that initiates an invincibility check, damage calculation, and hurt animations.
     take_damage: "def()->commands[
         //if you aren't currently invincible, take damage
         if(not self.invincible,[
@@ -75,8 +80,7 @@
         ]),
           ]",
   
-  //This starts the knockback animation that also makes the player go flying.
-  
+    // This starts the knockback animation that also makes the player go flying.
     take_knockback: "def()->commands[
       set(velocity_y, -500),
       set(velocity_x, (-facing * 250)),
@@ -84,24 +88,23 @@
       set(animation, 'hurt_weak'), //this might change depending on the amount of damage taken
     ]",
     
-    //This sets the object to turn red for a brief moment and then change back to a normal color again
-    //It calls two other functions, set_red() and reset_color()      
-    
-      damage_flash: "def()->commands[
+    // This sets the object to turn red for a brief moment and then change back to a normal color again.
+    // It calls two other functions, set_red() and reset_color().    
+    damage_flash: "def()->commands[
       set_red(),             // turns the enemy red
       schedule(3, reset_color()),  //back to normal
       schedule(6, set_red()),     //and red again
       schedule(9, reset_color()),  //and back to normal again
       ]",
 
-    //This sets the red channel to full and lowers the other two channels  
+    // This sets the red channel to full and lowers the other two channels.  
     set_red: "def()->commands[
         set(me.red, 255),
         set(me.blue, 100),
         set(me.green, 100),
         ]",
 
-    //This sets all color channels  back to normal
+    // This sets all color channels  back to normal.
     reset_color: "def()->commands [
         set(me.red, 255),
         set(me.blue, 255),
@@ -115,11 +118,11 @@
     kick_animations: "['flying_kick_start', 'flying_kick', 'jumping_kick_start', 'jumping_kick']",
     punch_animations: "['punch1', 'punch2', 'punch3_charge', 'punch3', 'punch3_end']",
     jump_animations: "['prejump', 'jump', 'fall']",
+    guard_animations: "['guard_crouch', 'guard_stand']",
     attack_animations: "[string]::punch_animations + uppercut_animations + kick_animations + stomp_animations",
 
   
-  #-------Health & Stamina-------#
-  
+  #-------Health & Stamina-------# 
   stamina: {type:"int", default: 100}, 
   
   // Takes in an ability class and subtracts from Miyamoto's stamina that ability's stamina cost.
@@ -136,6 +139,7 @@
   on_process:"[
     if('i' in ctrl_keys and 'i' not in ctrl_prev_keys, spawn('loadout_screen', {})),
 
+    //------------------------------USING ATTACKS----------------------------------
     map(equipped_abilities,
       if(stamina >= value.stamina_cost and value.should_start(me), [
         debug(['START ABILITY', value.name]),
@@ -145,7 +149,7 @@
       ])),
 
     //------------------------------WALKING----------------------------------
-    // If you pressed a direction, the player is standing and the player is not crouching or attacing, move in that direction.
+    // If you pressed a direction, the player is standing and the player is not crouching or attacking, move in that direction.
     if(ctrl_right and is_standing and animation not in ['crouch', 'guard_crouch', 'guard_stand'], [
       set(facing,1),
       if (animation != 'walk', set(animation, 'walk')), //'set animation' will set on every frame, so keep in mind when activating this on command
@@ -241,16 +245,38 @@
   on_end_enduppercut_anim:"set(animation, 'crouch')",
   on_end_flying_kick_start_anim:"set(animation,'flying_kick')",
   on_end_jumping_kick_start_anim:"set(animation,'jumping_kick')",
-  on_end_punch3_charge_anim: "[set(animation,'punch3'), reset_attack_timer(),           spawn('miyamoto_playable.punch3_proj',mid_x+15*facing,mid_y-11,{facing:facing,velocity_x:1500*facing})]",
-  on_end_punch3_anim: "[set(animation,'punch3_end'), set(velocity_x, 0),reset_attack_timer()]",
+  on_end_punch3_charge_anim: "[
+    set(animation,'punch3'), reset_attack_timer(),
+    spawn('miyamoto_playable.punch3_proj', 
+      mid_x+15*facing, 
+      mid_y-11, 
+      {facing:facing, velocity_x:1500*facing})
+  ]",
+  on_end_punch3_anim: "[set(animation,'punch3_end'), 
+    set(velocity_x, 0),
+    reset_attack_timer()
+  ]",
   on_end_punch3_end_anim: "set(animation,'stand')",
   on_end_risingstar_start_anim: "[set(animation,'risingstar')]",
-  on_end_risingstar_anim: "[set(animation,'risingstar_end'), set(velocity_x, 0)]",
+  on_end_risingstar_anim: "[
+    set(animation,'risingstar_end'), 
+    set(velocity_x, 0)
+  ]",
   
   //CHARGE UP PUNCH; TO COME LATER
-  //on_end_punch3_charge_anim: "[set(animation,'punch3'), reset_attack_timer(), set(velocity_x, 500*facing)]",
+  //on_end_punch3_charge_anim: "[set(animation,'punch3'), 
+//    reset_attack_timer(),  
+//    set(velocity_x, 
+//    500*facing)
+// ]",
 
-  on_end_axehandle_anim: "[spawn('miyamoto_playable.axehandle_proj',mid_x-10*facing,mid_y-45,{facing:facing,velocity_x:1000*facing,velocity_y:1000}),set(animation,'axehandle_hang')]",
+  on_end_axehandle_anim: "[
+    spawn('miyamoto_playable.axehandle_proj',
+      mid_x-10*facing,
+      mid_y-45,
+      {facing:facing,velocity_x:1000*facing,velocity_y:1000}),
+      set(animation,'axehandle_hang')
+  ]",
   
   //on_end_axehandle_hang_anim: "set(animation,'fall')",
   on_end_anim:"if(animation in ['punch1','punch2','punch3_charge'], if(is_standing, set(animation,'stand'),set(animation,'jump'), set(animation, 'prejump'), set(animation, 'crouch'), set(animation, 'guard_crouch'), set(animation, 'guard_stand')))",
@@ -286,10 +312,8 @@
     spawn('miyamoto_playable.stomp_proj',mid_x+50,mid_y-25,{facing:facing*facing-1}),
       ]",
 
-on_end_fallstomp_anim: "if(is_standing, [set(animation,'stand'),reset_attack_timer()])",
-      
-on_end_endstomp_anim:"set(animation,'stand')",
-
+  on_end_fallstomp_anim: "if(is_standing, [set(animation,'stand'),reset_attack_timer()])",      
+  on_end_endstomp_anim:"set(animation,'stand')",
   
   animation: [
     {
