Better comments and worked on guard logic

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -119,6 +119,7 @@
     punch_animations: "['punch1', 'punch2', 'punch3_charge', 'punch3', 'punch3_end']",
     jump_animations: "['prejump', 'jump', 'fall']",
     guard_animations: "['guard_crouch', 'guard_stand']",
+    crouch_animations: "['crouch', 'guard_crouch']",
     attack_animations: "[string]::punch_animations + uppercut_animations + kick_animations + stomp_animations",
 
   
@@ -150,15 +151,15 @@
 
     //------------------------------WALKING----------------------------------
     // If you pressed a direction, the player is standing and the player is not crouching or attacking, move in that direction.
-    if(ctrl_right and is_standing and animation not in ['crouch', 'guard_crouch', 'guard_stand'], [
+    if(ctrl_right and is_standing and animation not in crouch_animations + guard_animations + attack_animations , [
       set(facing,1),
       if (animation != 'walk', set(animation, 'walk')), //'set animation' will set on every frame, so keep in mind when activating this on command
       set(velocity_x, 300)]), 
-    if(ctrl_left and is_standing and animation not in ['crouch', 'guard_crouch', 'guard_stand'], [
+    if(ctrl_left and is_standing and animation not in crouch_animations + guard_animations, [
       set(facing,-1),
       if (animation != 'walk', set(animation, 'walk')), 
       set(velocity_x, -300)]), 
-    if((not(ctrl_left or ctrl_right))and(is_standing) and (animation not in ['crouch', 'guard_crouch', 'guard_stand']), //allows a list of excluded animations
+    if((not(ctrl_left or ctrl_right))and(is_standing) and (animation not in crouch_animations + guard_animations), //allows a list of excluded animations
       [set(animation, 'stand'), set(velocity_x, 0)]),
       
       
@@ -177,44 +178,36 @@
     ]),
     //-------------------------------GUARDING-------------------------------
   
-    // TODO: Redo Guard Stand Animation
     // Guard Stand is when you press D and are not attacking  or crouching
-    /*
-      [
+    if (('d' in ctrl_keys and self.animation not in crouch_animations + attack_animations + jump_animations),[
       set(animation, 'guard_stand'),
       set(velocity_x, 0),    
       ]),
-    */
-    // Guard Crouch happens when you press D and Down when you are not attacking.
-    /*
-    [
+    // Guard Crouch happens when you press D while crouching.
+    if (('d' in ctrl_keys and self.animation='crouch'),[
       set(animation, 'guard_crouch'), 
       set(velocity_x, 0),  
      ])
-    */ 
   ]",
   
 
-//-------------------------------JUMPING---------------------------------      
+//-------------------------------JUMPING---------------------------------   
+  // If you press D while jumping, you perform a stomp.   
   on_process_jump:"if('d' in ctrl_keys, set(animation,'beginstomp'))",
   
   on_process_fall:"if('d' in ctrl_keys, set(animation,'beginstomp'))",
   //on_process_prejump:"if('d' in ctrl_keys, set(animation,'beginstomp'))",
   on_ctrl_jump: 
-  "[
-  
-  if(is_standing and not ctrl_up and self.animation not in ['jump'], 
+  "[if(is_standing and not ctrl_up and self.animation not in ['jump'], 
     [  //TODO: check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
     if (animation not in jump_animations, set(animation, 'prejump')),
-    set(velocity_y, crouch_jump), //work on Miyamoto falling straight down upon walking off of an edge.
-    
-    if(self.animation in ['crouch'], 
-    set(velocity_y,crouch_jump)),
-    
+      set(velocity_y, crouch_jump), //work on Miyamoto falling straight down upon walking off of an edge.
+    if(self.animation ='crouch', 
+      set(velocity_y,crouch_jump)), 
     ]),
     
-  if(is_standing and ctrl_up, 
-    [ 
+  // TODO Rework this logic. Maybe move elsewhere.
+  if(is_standing and ctrl_up, [ 
     if (animation not in jump_animations, set(animation, 'backjump')),
       set(velocity_y, -400),
       set(velocity_x, -460*facing),
@@ -229,22 +222,31 @@
 //-----------------------------COLLISIONS----------------------------------
   on_collide_object_body: "[
     [if(arg.collide_with_area = 'projectile', 
-      
       take_damage(), //The player takes damage
       )],
     [if(arg.collide_with_area = 'enemy', 
-      
       take_damage(), //The Player takes damage
       )] ]",
 
 
 //---------------------ON END ANIMATION ---------------------------------------
   //--ATTACK ANIMATIONS
+  // begin_uppercut -> uppercut
   on_end_beginuppercut_anim:"set(animation, 'uppercut')",
+
+  // uppercut -> end_uppercut
   on_end_uppercut_anim:"set(animation, 'enduppercut')",
+
+  // end_uppercut -> crouch
   on_end_enduppercut_anim:"set(animation, 'crouch')",
+
+  // flying_kick_start -> flying_kick
   on_end_flying_kick_start_anim:"set(animation,'flying_kick')",
+  
+  // jumping_kick_start -> jumping_kick
   on_end_jumping_kick_start_anim:"set(animation,'jumping_kick')",
+  
+  // punch_3_charge -> punch3, spawn punch3 projectile
   on_end_punch3_charge_anim: "[
     set(animation,'punch3'), reset_attack_timer(),
     spawn('miyamoto_playable.punch3_proj', 
@@ -252,12 +254,20 @@
       mid_y-11, 
       {facing:facing, velocity_x:1500*facing})
   ]",
+
+  // punch3 -> punch3_end. Reset attack
   on_end_punch3_anim: "[set(animation,'punch3_end'), 
     set(velocity_x, 0),
     reset_attack_timer()
   ]",
+
+  // punch3_end -> stand
   on_end_punch3_end_anim: "set(animation,'stand')",
+
+  // risingstar_start -> risingstar
   on_end_risingstar_start_anim: "[set(animation,'risingstar')]",
+  
+  // risingstar -> risingstar_end, no horizontal movement.
   on_end_risingstar_anim: "[
     set(animation,'risingstar_end'), 
     set(velocity_x, 0)
