Fixed guard and deleted old readme file

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -168,23 +168,23 @@
       set(animation, 'crouch'),
       set(velocity_x, 0)
     ]),  
-    if ((ctrl_left and self.animation='crouch'),[
+    if ((ctrl_left and self.animation in crouch_animations + guard_animations),[
       set(facing,-1), 
       set(velocity_x, 0)
     ]),
-    if ((ctrl_right and self.animation='crouch'),[
+    if ((ctrl_right and self.animation in crouch_animations + guard_animations),[
       set(facing,1), 
       set(velocity_x, 0)
     ]),
     //-------------------------------GUARDING-------------------------------
   
     // Guard Stand is when you press D and are not attacking  or crouching
-    if (('d' in ctrl_keys and self.animation not in crouch_animations + attack_animations + jump_animations),[
+    if (('d' in ctrl_keys and (not ctrl_down) and self.is_standing and self.animation not in attack_animations + jump_animations),[
       set(animation, 'guard_stand'),
       set(velocity_x, 0),    
       ]),
     // Guard Crouch happens when you press D while crouching.
-    if (('d' in ctrl_keys and self.animation='crouch'),[
+    if (('d' in ctrl_keys and ctrl_down and self.is_standing and self.animation in crouch_animations + guard_animations),[
       set(animation, 'guard_crouch'), 
       set(velocity_x, 0),  
      ])
