Refactored backjump to be an equippable move

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -18,7 +18,7 @@
         (enum ability_basic): { (0): lib.game.get_ability('Punch') },
         (enum ability_crouch): { (0): lib.game.get_ability('Uppercut') },
         (enum ability_special): {},
-        (enum ability_evasive): {},
+        (enum ability_evasive): { (0): lib.game.get_ability('Backjump') },
         (enum ability_ultimate): {},
       }",
     },
@@ -113,6 +113,7 @@
         
   #-------Animation Groups-------#
     hurt_animations: "['hurt_weak', 'hurt_strong']",
+    backjump_animations: "['backjump', 'backjump_land']",
     stomp_animations: "['beginstomp', 'landstomp', 'endstomp', 'fallstomp']",  
     uppercut_animations: "['beginuppercut', 'uppercut', 'enduppercut']",
     kick_animations: "['flying_kick_start', 'flying_kick', 'jumping_kick_start', 'jumping_kick']",
@@ -138,12 +139,12 @@
     ]",
 
   on_process:"[
-    if('i' in ctrl_keys and 'i' not in ctrl_prev_keys, spawn('loadout_screen', {})),
+    if('i' in ctrl_keys and 'i' not in ctrl_prev_keys, spawn('loadout_screen', {})),     // Open the Inventory Screen by pressing I.
 
     //------------------------------USING ATTACKS----------------------------------
     map(equipped_abilities,
       if(stamina >= value.stamina_cost and value.should_start(me), [
-        debug(['START ABILITY', value.name]),
+        debug(['START ABILITY', value.name, value.animation]),
         use_stamina_for_ability(value),
         set(is_attacking, true), // start the attack
         set(animation, value.animation),
@@ -159,8 +160,8 @@
       set(facing,-1),
       if (animation != 'walk', set(animation, 'walk')), 
       set(velocity_x, -300)]), 
-    if((not(ctrl_left or ctrl_right))and(is_standing) and (animation not in crouch_animations + guard_animations), //allows a list of excluded animations
-      [set(animation, 'stand'), set(velocity_x, 0)]),
+    if((not(ctrl_left or ctrl_right))and(is_standing) and (animation in ['walk']),
+      [set(animation, 'stand'), set(velocity_x, 0), debug('walk velocity reset')]),
       
       
     //-------------------------------CROUCHING-------------------------------
@@ -197,27 +198,23 @@
   
   on_process_fall:"if('d' in ctrl_keys, set(animation,'beginstomp'))",
   //on_process_prejump:"if('d' in ctrl_keys, set(animation,'beginstomp'))",
-  on_ctrl_jump: 
-  "[if(is_standing and not ctrl_up and self.animation not in ['jump'], 
-    [  //TODO: check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
-    if (animation not in jump_animations, set(animation, 'prejump')),
-      set(velocity_y, crouch_jump), //work on Miyamoto falling straight down upon walking off of an edge.
-    if(self.animation ='crouch', 
-      set(velocity_y,crouch_jump)), 
+  on_ctrl_jump: "[
+    if(is_standing and not ctrl_up and self.animation not in ['backjump, jump'], [  
+      //TODO: check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
+      if (animation not in jump_animations, set(animation, 'prejump')),
+        set(velocity_y, crouch_jump), //work on Miyamoto falling straight down upon walking off of an edge.
+      if(self.animation ='crouch', 
+        set(velocity_y,crouch_jump)), 
     ]),
-    
-  // TODO Rework this logic. Maybe move elsewhere.
-  if(is_standing and ctrl_up, [ 
-    if (animation not in jump_animations, set(animation, 'backjump')),
-      set(velocity_y, -400),
-      set(velocity_x, -460*facing),
-      //set(last_backjumped, cycle)
-    ]),
-  
   ]",
 
   on_leave_prejump_anim: "[if(ctrl_jump and not ctrl_down and not ctrl_up, [set(velocity_y,standing_jump)])]",
 
+    // TODO Rework this logic. Maybe move elsewhere.
+  on_enter_backjump_anim: "[
+    set(velocity_y, -600),
+    set(velocity_x, (-facing * 490)),
+  ]",
 
 //-----------------------------COLLISIONS----------------------------------
   on_collide_object_body: "[
@@ -296,11 +293,12 @@
   on_end_guard_crouch_anim:"if(ctrl_down and not('d' in ctrl_keys),set(animation,'crouch'))",
   on_end_jump_anim:"set(animation,'fall')",
   on_end_prejump_anim:"set(animation,'jump')",
+  on_end_backjump_anim:"set(animation,'backjump_land')",
   
   
   on_collide_feet:"[
-    if(self.animation not in stomp_animations and ['backjump_land'], 
-      [set(animation,'stand'),set(velocity_x, 0)]),
+    if(self.animation not in stomp_animations and ['backjump, backjump_land'], 
+      [set(animation,'stand'),set(velocity_x, 0), debug ('velocity reset stand')]),
     if(self.animation in ['fallstomp'],
       [set(animation,'landstomp'),reset_attack_timer(),set(velocity_y,0)])
       ]",
