--- a/data/player-abilities.cfg
+++ b/data/player-abilities.cfg
@@ -95,5 +95,16 @@
   ",
 },
 
-]
+{
+  name: "Backjump",
+  animation: "backjump",
+  delay_cycles: 0,
+  stamina_cost: 2,
+  move_type: "@eval enum ability_evasive",
 
+  should_start: "def(obj miyamoto_playable player) ->bool
+    lib.game.control_pressed(player, enum control_jump) and lib.game.control_pressed(player, enum control_up) and player.animation not in player.jump_animations
+    // todo, figure out player.is_standing being a string.
+  ",
+},    
+]
