Fixing backjump more, fixed inventory bugs

--- a/data/classes/game.cfg
+++ b/data/classes/game.cfg
@@ -13,13 +13,20 @@
 	control_mapping: "{ControlKey -> string}<-
 	get_document('data/control-scheme.cfg')
 	",
+  // Behaves like 'if d in ctrl_keys'
+  in_control_keys: "def(obj miyamoto_playable player, ControlKey key) ->bool
+	keyname in player.ctrl_keys
+	where keyname = control_mapping[key]
+	",
 
+  // Checks for the moment a key is pressed
 	control_pressed: "def(obj miyamoto_playable player, ControlKey key) ->bool
 	(keyname in player.ctrl_keys) and (keyname not in player.ctrl_prev_keys)
 
 	where keyname = control_mapping[key]
 	",
-
+  
+  // Checks that a key is being continuously held down.
 	control_held: "def(obj miyamoto_playable player, ControlKey key) ->bool
 	(keyname in player.ctrl_keys) and (keyname in player.ctrl_prev_keys)
 
