--- a/data/control-scheme.cfg
+++ b/data/control-scheme.cfg
@@ -1,3 +1,4 @@
+// Define custom types in custom_types.cfg
 {
   "@eval enum control_left": "Left",
   "@eval enum control_right": "Right",
@@ -7,4 +8,5 @@
   "@eval enum control_jump": "a",
   "@eval enum control_guard": "d",
   "@eval enum control_ultimate": "f",
+  "@eval enum control_inventory": "i",
 }
