--- a/data/level/titlescreen.cfg
+++ b/data/level/titlescreen.cfg
@@ -3,10 +3,10 @@
 	"auto_move_camera": [0,0],
 	"character": [
 		{
-			"_addr": "093AEA78",
+			"_uuid": "ab2d8df77144400d92a349d96c3fa4bf",
 			"current_frame": "normal",
-			"custom": 1,
-			"is_human": 1,
+			"custom": true,
+			"is_human": true,
 			"label": "_1111",
 			"objects_destroyed": {
 				"level": "titlescreen.cfg",
@@ -18,126 +18,110 @@
 			"zorder": 0
 		},
 		{
-			"_addr": "093AF358",
+			"_uuid": "423a8c2da30148d3865f47d37c2f3794",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_2a05",
-			"type": "knife_thug",
 			"property_data": {
 				"_x2_bound": 278,
 				"_x_bound": 28,
 				"_y2_bound": 493,
 				"_y_bound": 243
 			},
+			"type": "knife_thug",
 			"x": 128,
 			"y": 319
 		},
 		{
-			"_addr": "093BEC98",
+			"_uuid": "a41f6a85072d43ea909e7a84781cb338",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_1314",
-			"type": "knife_thug",
 			"property_data": {
 				"_x2_bound": 214,
 				"_x_bound": -36,
 				"_y2_bound": 470,
 				"_y_bound": 220
 			},
+			"type": "knife_thug",
 			"x": 42,
 			"y": 319
 		},
 		{
-			"_addr": "093B4CB0",
+			"_uuid": "4e1a0aca19c04d24941827f3452846af",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_5ab6",
-			"type": "knife_thug",
 			"property_data": {
 				"_x2_bound": 150,
 				"_x_bound": -100,
 				"_y2_bound": 470,
 				"_y_bound": 220
 			},
+			"type": "knife_thug",
 			"x": 16,
 			"y": 319
 		},
 		{
-			"_addr": "093B50F8",
+			"_uuid": "b904a84d34554eb382278cd733c6e7c4",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_b43",
-			"type": "knife_thug",
 			"property_data": {
 				"_x2_bound": 342,
 				"_x_bound": 92,
 				"_y2_bound": 470,
 				"_y_bound": 220
 			},
+			"type": "knife_thug",
 			"x": 208,
 			"y": 319
 		},
 		{
-			"_addr": "093B5540",
+			"_uuid": "2abba9c53873442c9672d74550b80f4a",
 			"current_frame": "normal",
-			"custom": 1,
-			"label": "_72af",
-			"type": "knife_thug",
-			"property_data": {
-				"_x2_bound": -810,
-				"_x_bound": -1060,
-				"_y2_bound": 206,
-				"_y_bound": -44
-			},
-			"x": -960,
-			"y": 95
-		},
-		{
-			"_addr": "093B5988",
-			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_1326",
-			"type": "knife_thug",
 			"property_data": {
 				"_x2_bound": 406,
 				"_x_bound": 156,
 				"_y2_bound": 470,
 				"_y_bound": 220
 			},
+			"type": "knife_thug",
 			"x": 256,
 			"y": 319
 		},
 		{
-			"_addr": "093B5DD0",
+			"_uuid": "aa315ec7da4e43f89a6147cacceb5100",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_4e1",
-			"type": "knife_thug",
 			"property_data": {
 				"_x2_bound": 118,
 				"_x_bound": -132,
 				"_y2_bound": 470,
 				"_y_bound": 220
 			},
+			"type": "knife_thug",
 			"x": -32,
 			"y": 319
 		},
 		{
-			"_addr": "093B6218",
+			"_uuid": "b6f681101103416bab77eb4834de5b8d",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_14fb",
-			"type": "knife_thug",
 			"property_data": {
 				"_x2_bound": 86,
 				"_x_bound": -164,
 				"_y2_bound": 470,
 				"_y_bound": 220
 			},
+			"type": "knife_thug",
 			"x": -64,
 			"y": 319
-		},
-
+		}
 	],
 	"dimensions": [-1280,-992,1983,2303],
 	"id": "titlescreen.cfg",
@@ -148,7 +132,7 @@
 	"serialized_objects": {
 		"character": []
 	},
-	"set_screen_resolution_on_entry": 0,
+	"set_screen_resolution_on_entry": false,
 	"tile_map": {
 		"tiles": ",
 ,
@@ -177,8 +161,8 @@ dbr,
 dbr,
 dbr,
 dbr,
-dbr,
-dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,,,,dbr,dbr,dbr,dbr,,,,dbr,dbr,,dbr,,,,dbr,,,,,dbr,dbr,dbr,,dbr,dbr,dbr,dbr,,dbr,dbr,dbr
+dbr,,,,,,,,,,dbr
+dbr,,,,,,,,,,,dbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dbr,,,,dbr,dbr,dbr,dbr,,,,dbr,dbr,,dbr,,,,dbr,,,,,dbr,dbr,dbr,,dbr,dbr,dbr,dbr,,dbr,dbr,dbr
 dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
 dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
 dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dgr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,dgr,dgr
@@ -251,7 +235,7 @@ dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,dbr,
 		"zorder": 0
 	},
 	"title": "",
-	"touch_controls": 1,
+	"touch_controls": true,
 	"vars": {
 	},
 	"version": "1.4",
