--- a/data/objects/inventory/loadout_button.cfg
+++ b/data/objects/inventory/loadout_button.cfg
@@ -236,6 +236,12 @@
 		x: 0, y: 56, w: 16, h: 16,
 	},
 
+  {
+		id: "ability_backjump",
+		frames: 1,
+		x: 0, y: 56, w: 16, h: 16,
+	},
+
 	{
 		id: "available_ability",
 		frames: 1,
