--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -139,7 +139,7 @@
     ]",
 
   on_process:"[
-    if('i' in ctrl_keys and 'i' not in ctrl_prev_keys, spawn('loadout_screen', {})),     // Open the Inventory Screen by pressing I.
+    if(lib.game.control_pressed(me, enum control_inventory), spawn('loadout_screen', {})),     // Open the Inventory Screen by pressing I.
 
     //------------------------------USING ATTACKS----------------------------------
     map(equipped_abilities,
