--- a/data/types/custom_types.cfg
+++ b/data/types/custom_types.cfg
@@ -7,13 +7,14 @@
 // Mappings are found in control-scheme.cfg
   ControlKey: "enum { 
     control_left,
-	control_right,
-	control_up,
-	control_down,
-	control_attack,
-	control_jump,
-	control_guard,
-	control_ultimate
+    control_right,
+    control_up,
+    control_down,
+    control_attack,
+    control_jump,
+    control_guard,
+    control_ultimate,
+    control_inventory
   }",
 
 // AbilityType
