No more flappy bird

--- a/data/player-abilities.cfg
+++ b/data/player-abilities.cfg
@@ -103,7 +103,7 @@
   move_type: "@eval enum ability_evasive",
 
   should_start: "def(obj miyamoto_playable player) ->bool
-    lib.game.control_pressed(player, enum control_jump) and lib.game.control_held(player, enum control_up) and player.is_standing and player.animation not in player.jump_animations
+    lib.game.control_pressed(player, enum control_jump) and lib.game.control_held(player, enum control_up) and bool(player.is_standing) and player.animation not in player.jump_animations
     // todo, figure out player.is_standing being a string.
   ",
 },    
